--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
-# ignore ALL .png files
-*.png
-
-# ignore ALL .jpg files
-*.jpg
-
-# ignore ALL .tff files
-*.tff
-
-# ignore ALL .css files
-*.css
-
-# ignore ALL .DS_Store files
-*.DS_Store
+/css
+/font
+/media
